--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
             const stream = dest.stream; // _stream
 
-            const recorder = new window.MediaRecorder(dest.stream);
+            const recorder = new window.MediaRecorder(stream);
             let chunks = [];
             let recording = false;
 
