--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>bouncy</title>
 </head>
 <body>
+    <span></span>
     <audio id="input" src="examples/LIFE.wav" type="audio/wav" controls></audio> 
     <audio controls id="output"></audio>
     <button></button>
@@ -27,6 +28,9 @@
             height: 1em;
             width: 1em;
             background-color: black;
+        }
+        audio {
+            display: block;
         }
     </style>
     <script type="module" src="index.js"></script>
