--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <button></button>
     <style>
         button {
+            position: absolute;
+            bottom: 5%;
+            left: 50%;
+            transform: translateX(-50%);
             display: block;
             height: 5em;
             width: 5em;
