adjust index to ver. 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </main>
     <menu>
         <li>
-            <button></button>
+            <button id="record"></button>
         </li>
     </menu>
     <script type="module" src="index.js"></script>
