speech to text support

--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css"/>
     <title>bouncy</title>
 </head>
 <body>
@@ -12,6 +11,31 @@
     <audio id="input" src="examples/LIFE.wav" type="audio/wav" controls></audio> 
     -->
     <main>
+        <section id="speech_account">
+            <form>
+                <div class="speech_signup">
+                    <div class="speech_info">
+                        <label for="speech_key">Speech Key</label>
+                        <input name="speech_key" id="speech_key" type="text">
+                        <label for="speech_region">Speech Region</label>
+                        <input name="speech_region" id="speech_region" type="text">
+                    </div>
+                </div>
+                <div class="speech_signup speech_login">
+                    <div class="speech_info">
+                        <label for="speech_passwd">Password</label>
+                        <input name="speech_passwd" id="speech_passwd" type="text">
+                    </div>
+                </div>
+            </form>
+            <div class="speech_signup">
+                <button id="register">Register</button>
+            </div>
+            <div class="speech_login">
+                <button id="login">Login</button>
+                <button id="logout">Logout</button>
+            </div>
+        </section>
         <ul>
         </ul>
     </main>
@@ -20,6 +44,5 @@
             <button id="record"></button>
         </li>
     </menu>
-    <script type="module" src="index.js"></script>
 </body>
 </html>
